# backend

./: .gitattributes  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
data/: attend.csv  attendance.pkl  babybooms.csv  bornstat.csv  checkpoint.pt  dict.xlsx  geocoord_groups.txt  geocoord_persons.txt  groups.csv  infer_ids.csv  infer_users_out.csv  test.csv  user_names.csv  users.csv
src/dedformer/: arcface.py  born_mort.py  gen_names.py  infer.py  model.py  parse_geo_persons.py  process_attendance.py  t5.py  test_geo.py  test_tt.py  train.py
src/dedformer/api/: __main__.py  app.py
