[tool.poetry]
name = "dedformer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "dedformer", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
xztrainer = "^0.10.1"
torch = {version = "^2.0.1+cu118", source = "torch-cu11.8"}
transformers = "^4.29.2"
jupyterlab = "^4.0.0"
geopy = "^2.3.0"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
tensorboard = "^2.13.0"
torchmetrics = "^0.11.4"
pandarallel = "^1.6.5"
orjson = "^3.8.13"
pytorch-metric-learning = "^2.1.1"
madgrad = "^1.3"


[[tool.poetry.source]]
name = "torch-cu11.8"
url = "https://download.pytorch.org/whl/cu118"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
