[tool.poetry]
name = "dedformer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "dedformer", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
xztrainer = "^0.10.1"
torch = {version = "^2.0.1+cu118", source = "torch-cu11.8"}
transformers = "^4.29.2"
geopy = "^2.3.0"
scikit-learn = "^1.2.2"
tensorboard = "^2.13.0"
torchmetrics = "^0.11.4"
pandarallel = "^1.6.5"
orjson = "^3.8.13"
pytorch-metric-learning = "^2.1.1"
madgrad = "^1.3"
jupyterlab = "^4.0.0"
catboost = "^1.2"
notebook = "^6.5.4"
pandas = "^2.0.1"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
faker = "^18.9.0"
sympy = "^1.12"
torchvision = {version = "^0.15.2+cu118", source = "torch-cu11.8"}
selenium = "^4.9.1"
openpyxl = "^3.1.2"


[[tool.poetry.source]]
name = "torch-cu11.8"
url = "https://download.pytorch.org/whl/cu118"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
